re #198: fixed visibility for 'What' field and 'create event' button

--- a/src/zojax/calendar/browser/resources/styles.css
+++ b/src/zojax/calendar/browser/resources/styles.css
@@ -98,4 +98,9 @@
     padding-bottom: 25px;
   }
 
+  input.textbox-fill-input,
+  input#bbit-cal-quickAddBTN {
+    visibility: inherit;
+  }
+
 }
